--- a/src/MEC.ControleRDO/Views/Fiscal/CreateFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/CreateFiscal.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Adicionar Fiscal</h2>
 
-<form asp-action="Create" method="post">
+<form asp-action="CreateFiscalConfirmed" method="post">
     <div class="form-group">
         <label asp-for="Nome" class="control-label"></label>
         <input asp-for="Nome" class="form-control" />
@@ -16,4 +16,4 @@
     </div>
 </form>
 
-<a asp-action="Index">Back to List</a>
+<a asp-action="IndexFiscal">Back to List</a>
