--- a/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
@@ -3,7 +3,7 @@
 <h2>Fiscal Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateFiscalConfirmed">Create New</a>
 </p>
 
 <table class="table">
@@ -23,9 +23,9 @@
                 <td>@fiscal.Nome</td>
                 <td>@fiscal.Email</td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@fiscal.Id">Details</a> |
-                    <a asp-action="Edit" asp-route-id="@fiscal.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@fiscal.Id">Delete</a>
+                    <a asp-action="DetailsFiscal" asp-route-id="@fiscal.Id">Details</a> |
+                    <a asp-action="EditFiscal" asp-route-id="@fiscal.Id">Edit</a> |
+                    <a asp-action="DeleteFiscal" asp-route-id="@fiscal.Id">Delete</a>
                 </td>
             </tr>
         }
