--- a/src/MEC.ControleRDO/Views/Shared/_Layout.cshtml
+++ b/src/MEC.ControleRDO/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Fiscal">Fiscal</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fiscal" asp-action="IndexFiscal">Fiscal</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Obra" asp-action="IndexObra">Obra</a>
                         </li>
                     </ul>
                 </div>
