--- a/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
@@ -3,7 +3,9 @@
 <h2>Fiscal Index</h2>
 
 <p>
-    <a asp-action="CreateFiscalConfirmed">Create New</a>
+    <form action="CreateFiscal">
+        <button type="submit">Create New</button>
+    </form>
 </p>
 
 <table class="table">
