--- a/src/MEC.ControleRDO/Views/Obra/IndexObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/IndexObra.cshtml
@@ -3,7 +3,9 @@
 <h2>Obra Index</h2>
 
 <p>
-    <a asp-action="CreateObraConfirmed">Create New</a>
+    <form action="CreateObra">
+        <button type="submit">Create New</button>
+    </form>
 </p>
 
 <table class="table">
