--- a/src/MEC.ControleRDO/Views/Shared/_Layout.cshtml
+++ b/src/MEC.ControleRDO/Views/Shared/_Layout.cshtml
@@ -20,13 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Fiscal" asp-action="IndexFiscal">Fiscal</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Obra" asp-action="IndexObra">Obra</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rdo" asp-action="IndexRdo">Rdo</a>
                         </li>
                     </ul>
                 </div>
