--- a/src/MEC.ControleRDO/Views/Obra/CreateObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/CreateObra.cshtml
@@ -16,7 +16,7 @@
         <input asp-for="SE" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="FiscalId" class="control-label">Selecione um Fiscal</label>
+        <label asp-for="FiscalId" class="control-label"></label>
         <select asp-for="FiscalId" asp-items="@(new SelectList(Model.ListaDeFiscais, "Id", "Nome"))" class="form-control"></select>
     </div>
     <div class="form-group">
