--- a/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
@@ -1,20 +1,40 @@
-﻿@model Data.VO.FiscalVO
+﻿@model Data.VO.RdoVO
 
-<h2>Fiscal Details</h2>
+<h2>Rdo Details</h2>
 
 <dl class="row">
     <dt class="col-sm-2">Id</dt>
     <dd class="col-sm-10">@Model.Id</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">Nome</dt>
-    <dd class="col-sm-10">@Model.Nome</dd>
+    <dt class="col-sm-2">DataRdo</dt>
+    <dd class="col-sm-10">@Model.DataRdo.ToString("dd/MM/yyyy")</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">Email</dt>
-    <dd class="col-sm-10">@Model.Email</dd>
+    <dt class="col-sm-2">DataEnvio</dt>
+    <dd class="col-sm-10">@Model.DataEnvio.ToString("dd/MM/yyyy")</dd>
+</dl>
+<dl class="row">
+    <dt class="col-sm-2">DataAssinatura</dt>
+    <dd class="col-sm-10">@Model.DataAssinatura?.ToString("dd/MM/yyyy")</dd>
+</dl>
+<dl class="row">
+    <dt class="col-sm-2">Observacao</dt>
+    <dd class="col-sm-10">@Model.Observacao</dd>
+</dl>
+<dl class="row">
+    <dt class="col-sm-2">NumeroOrcamento</dt>
+    <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
+</dl>
+<dl class="row">
+    <dt class="col-sm-2">NomeFiscal</dt>
+    <dd class="col-sm-10">@Model.NomeFiscal</dd>
+</dl>
+<dl class="row">
+    <dt class="col-sm-2">NomeObra</dt>
+    <dd class="col-sm-10">@Model.NomeObra</dd>
 </dl>
 
-<form asp-action="DeleteFiscalConfirmed" method="post">
-    <a asp-action="IndexFiscal">Back to List</a>
+<form asp-action="DeleteRdoConfirmed" method="post">
+    <a asp-action="IndexRdo">Back to List</a>
 </form>
