--- a/src/MEC.ControleRDO/Views/Obra/DetailsObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/DetailsObra.cshtml
@@ -7,7 +7,7 @@
     <dd class="col-sm-10">@Model.Id</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">NumeroOrcamento</dt>
+    <dt class="col-sm-2">Numero do Orcamento</dt>
     <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
 </dl>
 <dl class="row">
@@ -19,6 +19,6 @@
     <dd class="col-sm-10">@Model.SE</dd>
 </dl>
 
-<form asp-action="DeleteObraConfirmed" method="post">
+<form>
     <a asp-action="IndexObra">Back to List</a>
 </form>
