--- a/src/MEC.ControleRDO/Views/Fiscal/DeleteFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/DeleteFiscal.cshtml
@@ -3,6 +3,13 @@
 <h2>Delete Fiscal</h2>
 
 <div>
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewData["ErrorMessage"]
+        </div>
+    }
+
     <h3>Are you sure you want to delete this?</h3>
     <dl class="row">
         <dt class="col-sm-2">Id</dt>
@@ -16,6 +23,7 @@
         <dt class="col-sm-2">Email</dt>
         <dd class="col-sm-10">@Model.Email</dd>
     </dl>
+
     <form asp-action="DeleteFiscalConfirmed" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
