--- a/src/MEC.ControleRDO/Views/Fiscal/DetailsFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/DetailsFiscal.cshtml
@@ -15,6 +15,6 @@
     <dd class="col-sm-10">@Model.Email</dd>
 </dl>
 
-<form asp-action="DeleteFiscalConfirmed" method="post">
+<form>
     <a asp-action="IndexFiscal">Back to List</a>
 </form>
