--- a/src/MEC.ControleRDO/Views/Obra/DeleteObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/DeleteObra.cshtml
@@ -3,13 +3,19 @@
 <h2>Delete obra</h2>
 
 <div>
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewData["ErrorMessage"]
+        </div>
+    }
     <h3>Are you sure you want to delete this?</h3>
     <dl class="row">
         <dt class="col-sm-2">Id</dt>
         <dd class="col-sm-10">@Model.Id</dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">NumeroOrcamento</dt>
+        <dt class="col-sm-2">Numero do Orcamento</dt>
         <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
     </dl>
     <dl class="row">
@@ -20,6 +26,7 @@
         <dt class="col-sm-2">SE</dt>
         <dd class="col-sm-10">@Model.SE</dd>
     </dl>
+    <br/>
     <form asp-action="DeleteObraConfirmed" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
