--- a/src/MEC.ControleRDO/Views/Rdo/DeleteRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DeleteRdo.cshtml
@@ -3,27 +3,34 @@
 <h2>Delete Fiscal</h2>
 
 <div>
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewData["ErrorMessage"]
+        </div>
+    }
     <h3>Are you sure you want to delete this?</h3>
     <dl class="row">
         <dt class="col-sm-2">Id</dt>
         <dd class="col-sm-10">@Model.Id</dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">DataRdo</dt>
-        <dd class="col-sm-10">@Model.DataRdo</dd>
+        <dt class="col-sm-2">Data do Rdo</dt>
+        <dd class="col-sm-10">@Model.DataRdo.ToString("dd/MM/yyyy")</dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">NumeroOrcamento</dt>
-        <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
+        <dt class="col-sm-2">Numero do Orçamento</dt>
+        <dd class="col-sm-10">@Model.DataEnvio.ToString("dd/MM/yyyy")</dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">DataAssinatura</dt>
-        <dd class="col-sm-10">@Model.DataAssinatura</dd>
+        <dt class="col-sm-2">Data da Assinatura</dt>
+        <dd class="col-sm-10">@Model.DataAssinatura?.ToString("dd/MM/yyyy")</dd>
     </dl>
     <dl class="row">
-        <dt class="col-sm-2">Observacao</dt>
+        <dt class="col-sm-2">Observaçao</dt>
         <dd class="col-sm-10">@Model.Observacao</dd>
     </dl>
+    <br/>
     <form asp-action="DeleteRdoConfirmed" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
