--- a/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
@@ -7,34 +7,34 @@
     <dd class="col-sm-10">@Model.Id</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">DataRdo</dt>
+    <dt class="col-sm-2">Data do Rdo</dt>
     <dd class="col-sm-10">@Model.DataRdo.ToString("dd/MM/yyyy")</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">DataEnvio</dt>
+    <dt class="col-sm-2">Data do Envio</dt>
     <dd class="col-sm-10">@Model.DataEnvio.ToString("dd/MM/yyyy")</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">DataAssinatura</dt>
+    <dt class="col-sm-2">Data da Assinatura</dt>
     <dd class="col-sm-10">@Model.DataAssinatura?.ToString("dd/MM/yyyy")</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">Observacao</dt>
+    <dt class="col-sm-2">Observaçao</dt>
     <dd class="col-sm-10">@Model.Observacao</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">NumeroOrcamento</dt>
+    <dt class="col-sm-2">Numero do Orçamento</dt>
     <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">NomeFiscal</dt>
+    <dt class="col-sm-2">Nome do Fiscal</dt>
     <dd class="col-sm-10">@Model.NomeFiscal</dd>
 </dl>
 <dl class="row">
-    <dt class="col-sm-2">NomeObra</dt>
+    <dt class="col-sm-2">Nome da Obra</dt>
     <dd class="col-sm-10">@Model.NomeObra</dd>
 </dl>
 
-<form asp-action="DeleteRdoConfirmed" method="post">
+<form>
     <a asp-action="IndexRdo">Back to List</a>
 </form>
