--- a/src/MEC.ControleRDO/Views/Rdo/EditRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/EditRdo.cshtml
@@ -37,6 +37,10 @@
         <label asp-for="Observacao" class="control-label"></label>
         <textarea asp-for="Observacao" class="form-control col-sm-12"></textarea>
     </div>
+    <div class="form-group">
+        <label asp-for="ObraId" class="control-label"></label>
+        <select asp-for="ObraId" asp-items="@(new SelectList(Model.ListaObra, "Id", "Nome"))" class="form-control"></select>
+    </div>
     <br />
     <div class="form-group">
         <input type="submit" value="Edit" class="btn btn-primary" />
