--- a/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Data.VO.RdoVO
 
-<h2>Rdo Details</h2>
+<head>
+    <link rel="stylesheet" href="~/css/Rdo/details.css">
+</head>
+
+<h2>Detalhes</h2>
 
 <dl class="row">
     <dt class="col-sm-2">Id</dt>
@@ -36,5 +40,5 @@
 </dl>
 
 <form>
-    <a asp-action="IndexRdo">Back to List</a>
+    <a asp-action="IndexRdo">Voltar</a>
 </form>
