--- a/src/MEC.ControleRDO/Views/Fiscal/DeleteFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/DeleteFiscal.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Data.VO.FiscalVO
 
-<h2>Delete Fiscal</h2>
+<head>
+    <link rel="stylesheet" href="~/css/Fiscal/delete.css">
+</head>
+
+<h2>Deletar</h2>
 
 <div>
     @if (ViewData["ErrorMessage"] != null)
@@ -10,7 +14,6 @@
         </div>
     }
 
-    <h3>Are you sure you want to delete this?</h3>
     <dl class="row">
         <dt class="col-sm-2">Id</dt>
         <dd class="col-sm-10">@Model.Id</dd>
@@ -23,10 +26,10 @@
         <dt class="col-sm-2">Email</dt>
         <dd class="col-sm-10">@Model.Email</dd>
     </dl>
-
+    <br/>
     <form asp-action="DeleteFiscalConfirmed" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="IndexFiscal">Back to List</a>
+        <a asp-action="IndexFiscal">Voltar</a>
     </form>
 </div>
