--- a/src/MEC.ControleRDO/Views/Home/Index.cshtml
+++ b/src/MEC.ControleRDO/Views/Home/Index.cshtml
@@ -1,1 +1,12 @@
-﻿<h1> teste</h1>
+﻿@{
+    ViewBag.Title = "Home";
+}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@ViewBag.Title</title>
+</head>
+<body>
+</body>
+</html>
