--- a/src/MEC.ControleRDO/Views/Rdo/DeleteRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DeleteRdo.cshtml
@@ -1,6 +1,10 @@
 ﻿@model Data.VO.RdoVO
 
-<h2>Delete Fiscal</h2>
+<head>
+    <link rel="stylesheet" href="~/css/Rdo/delete.css">
+</head>
+
+<h2>Deletar</h2>
 
 <div>
     @if (ViewData["ErrorMessage"] != null)
@@ -9,7 +13,6 @@
             @ViewData["ErrorMessage"]
         </div>
     }
-    <h3>Are you sure you want to delete this?</h3>
     <dl class="row">
         <dt class="col-sm-2">Id</dt>
         <dd class="col-sm-10">@Model.Id</dd>
@@ -34,6 +37,6 @@
     <form asp-action="DeleteRdoConfirmed" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="IndexRdo">Back to List</a>
+        <a asp-action="IndexRdo">Voltar</a>
     </form>
 </div>
