--- a/src/MEC.ControleRDO/Views/Fiscal/EditFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/EditFiscal.cshtml
@@ -13,11 +13,11 @@
     </div>
     <div class="form-group">
         <label asp-for="Nome" class="control-label"></label>
-        <input asp-for="Nome" class="form-control" />
+        <input asp-for="Nome" class="form-control" required />
     </div>
     <div class="form-group">
         <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" />
+        <input asp-for="Email" class="form-control" required />
     </div>
     <br />
     <div class="form-group">
