--- a/src/MEC.ControleRDO/Views/Obra/CreateObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/CreateObra.cshtml
@@ -8,20 +8,26 @@
 
 <form asp-action="CreateObraConfirmed" method="post">
     <div class="form-group">
-        <label asp-for="NumeroOrcamento" class="control-label"></label>
-        <input asp-for="NumeroOrcamento" class="form-control" />
+        <label asp-for="NumeroOrcamento"></label>
+        <input asp-for="NumeroOrcamento" class="form-control" required />
     </div>
     <div class="form-group">
-        <label asp-for="Nome" class="control-label"></label>
-        <input asp-for="Nome" class="form-control" />
+        <label asp-for="Nome"></label>
+        <input asp-for="Nome" class="form-control" required />
     </div>
     <div class="form-group">
-        <label asp-for="SE" class="control-label"></label>
-        <input asp-for="SE" class="form-control" />
+        <label asp-for="SE"></label>
+        <input asp-for="SE" class="form-control" required />
     </div>
     <div class="form-group">
         <label asp-for="FiscalId" class="control-label"></label>
-        <select asp-for="FiscalId" asp-items="@(new SelectList(Model.ListaDeFiscais, "Id", "Nome"))" class="form-control"></select>
+        <select asp-for="FiscalId" class="form-control" required>
+            <option value="">Selecione um Fiscal</option>
+            @foreach (var fiscal in Model.ListaDeFiscais)
+            {
+               <option value="@fiscal.Id">@fiscal.Nome</option>
+            }
+        </select>
     </div>
     <br />
     <div class="form-group">
