--- a/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
+++ b/src/MEC.ControleRDO/Views/Fiscal/IndexFiscal.cshtml
@@ -12,7 +12,7 @@
     </form>
 </p>
 
-<table class="table">
+<table class="table" id="table">
     <thead>
         <tr>
             <th>Nome</th>
