--- a/src/MEC.ControleRDO/Views/Obra/IndexObra.cshtml
+++ b/src/MEC.ControleRDO/Views/Obra/IndexObra.cshtml
@@ -13,7 +13,7 @@
     </form>
 </p>
 
-<table class="table">
+<table class="table" id="table">
     <thead>
         <tr>
             <th>Numero do Orçamento</th>
