--- a/src/MEC.ControleRDO/Views/Rdo/IndexRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/IndexRdo.cshtml
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<table class="table">
+<table class="table" id="table">
     <thead>
         <tr>
             <th>Data do Rdo</th>
