--- a/src/MEC.ControleRDO/Views/Home/Index.cshtml
+++ b/src/MEC.ControleRDO/Views/Home/Index.cshtml
@@ -1,12 +1,8 @@
-﻿@{
-    ViewBag.Title = "Home";
+﻿﻿@{
+    ViewData["Title"] = "Página Inicial";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>@ViewBag.Title</title>
-</head>
-<body>
-</body>
-</html>
+<div class="text-center">
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Sistema de controle de RDOs</p>
+</div>
