--- a/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
+++ b/src/MEC.ControleRDO/Views/Rdo/DetailsRdo.cshtml
@@ -1,4 +1,5 @@
-﻿@model Data.VO.RdoVO
+﻿@using MEC.ControleRDO.Enum
+@model Data.VO.RdoVO
 
 <head>
     <link rel="stylesheet" href="~/css/Rdo/details.css">
@@ -10,30 +11,45 @@
     <dt class="col-sm-2">Id</dt>
     <dd class="col-sm-10">@Model.Id</dd>
 </dl>
+
 <dl class="row">
     <dt class="col-sm-2">Data do Rdo</dt>
     <dd class="col-sm-10">@Model.DataRdo.ToString("dd/MM/yyyy")</dd>
 </dl>
+
 <dl class="row">
     <dt class="col-sm-2">Data do Envio</dt>
     <dd class="col-sm-10">@Model.DataEnvio.ToString("dd/MM/yyyy")</dd>
 </dl>
+
 <dl class="row">
-    <dt class="col-sm-2">Data da Assinatura</dt>
-    <dd class="col-sm-10">@Model.DataAssinatura?.ToString("dd/MM/yyyy")</dd>
+    <dt class="col-sm-2">Assinatura</dt>
+    <dd class="col-sm-10">@Model.Assinatura</dd>
 </dl>
+
+@if (Model.Assinatura == AssEnum.sim)
+{
+    <dl class="row">
+        <dt class="col-sm-2">Data da Assinatura</dt>
+        <dd class="col-sm-10">@Model.DataAssinatura?.ToString("dd/MM/yyyy")</dd>
+    </dl>
+}
+
 <dl class="row">
     <dt class="col-sm-2">Observaçao</dt>
     <dd class="col-sm-10">@Model.Observacao</dd>
 </dl>
+
 <dl class="row">
     <dt class="col-sm-2">Numero do Orçamento</dt>
     <dd class="col-sm-10">@Model.NumeroOrcamento</dd>
 </dl>
+
 <dl class="row">
     <dt class="col-sm-2">Nome do Fiscal</dt>
     <dd class="col-sm-10">@Model.NomeFiscal</dd>
 </dl>
+
 <dl class="row">
     <dt class="col-sm-2">Nome da Obra</dt>
     <dd class="col-sm-10">@Model.NomeObra</dd>
